# job_scrapy

./: .env.example  .gitignore  README.md  docker-compose.yml  hello.py  init-mongo.js  main.py  pyproject.toml
job_scrapy/: items.py  pipelines.py  settings.py  zenrow_utils.py
job_scrapy/spiders/: job_spider.py
scripts/: init-postgresql.sql
src/: job_details_pipeline.py
utils/: selector.py
